<resources>
    <string name="app_name">CleanWater</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="register">Register</string>
    <string name="confirm_email_address">Confirm Email Address</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="show_password">Show password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="edit_address">New Address</string>
    <string name="edit_name">New Name</string>
    <string name="submit_report">Submit Report</string>
    <string name="add_water_source_report">Add Water Source Report</string>
    <string name="add_water_purity_report">Add Water Purity Report</string>
    <string name="add_history_report">Add Historical Report</string>
    <string name="historical_graph">Historical Report Graph</string>
    <string name="close">Close</string>
    <string name="submitting_as">Submitting as: </string>
    <string name="location_coord">Latitude and Longitude</string>
    <string name="year">Year</string>
    <string name="ppm">PPM</string>
    <string name="list_reports">List Reports</string>
    <string name="edit_name_label">Edit Name</string>
    <string name="edit_address_label">Edit Address</string>
    <string name="edit_label">Edit</string>
    <string name="cancel_label">Cancel</string>
    <string name="change_password_label">Change Password</string>
    <string name="_0">0</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="water_condition">Water Condition:</string>
    <string name="virus_ppm">Virus PPM:</string>
    <string name="contaminant_ppm">Contaminant PPM:</string>
    <string name="type_of_water">Type of Water</string>
    <string name="condition_of_water">Condition of Water</string>
</resources>
