<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/submitting_as"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/source_submitting_as_label"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:text="@string/type_of_water"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="30dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/source_type_spinner"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="0dp" />

    <TextView
        android:text="@string/condition_of_water"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCondition"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/source_water_condition_spinner"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/textViewLatLong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/location_coord"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <EditText
            android:id="@+id/latitude2"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginStart="30dp"
            android:hint="@string/_0"
            android:inputType="numberSigned|numberDecimal"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <EditText
            android:id="@+id/longitude2"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="30dp"
            android:hint="@string/_0"
            android:inputType="numberSigned|numberDecimal" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">


        <Button
            android:id="@+id/source_cancel_button"
            style="@android:style/TextAppearance.Material.Small"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:layout_column="1"/>

        <Button
            android:id="@+id/source_create_button"
            style="@android:style/TextAppearance.Material.Small"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/create"
            android:textStyle="bold"
            android:layout_column="0"/>

    </GridLayout>
</LinearLayout>