<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.DrNankn.cleanwater.Activities.EditProfileActivity">

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/progress_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_group"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/profile_picture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_edit_profile" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:text="@string/edit_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editNameLabel" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_name"
            android:inputType="text"
            android:maxLines="1" />

        <TextView
            android:text="@string/edit_address_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" />

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_address"
            android:inputType="text"
            android:maxLines="1" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">


            <Button
                android:id="@+id/edit_button"
                style="?android:textAppearanceSmall"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/edit_label"
                android:textStyle="bold"
                android:layout_column="0"/>

            <Button
                android:id="@+id/cancel_button"
                style="@android:style/TextAppearance.Material.Small"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/cancel_label"
                android:textStyle="bold"
                android:layout_column="1"/>

        </GridLayout>

    </LinearLayout>

    <Button
        android:text="@string/change_password_label"
        style="@android:style/TextAppearance.Material.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_group"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:id="@+id/button2" />


</RelativeLayout>
