<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewyear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/year"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <EditText
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/ppm"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <Spinner
        android:id="@+id/ppm_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/location_coord"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <EditText
            android:id="@+id/latitude3"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginLeft="30dp"
            android:hint="0"
            android:inputType="numberDecimal"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <EditText
            android:id="@+id/longitude3"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="30dp"
            android:hint="0"
            android:inputType="numberDecimal" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">


        <Button
            android:id="@+id/history_cancel_button"
            style="@android:style/TextAppearance.Material.Small"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="Cancel"
            android:textStyle="bold"
            android:layout_column="1"/>

        <Button
            android:id="@+id/history_create_button"
            style="@android:style/TextAppearance.Material.Small"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="Create"
            android:textStyle="bold"
            android:layout_column="0"/>

    </GridLayout>
</LinearLayout>